# QuantumDGM

./: .gitignore  ARTIFACTS.md  LICENSE  MANIFEST.in  README.md  paper.tex  paper_table_metrics.json  pyproject.toml  requirements.txt  revised_plan.tex  revised_plan_v2.tex  revised_plan_v3.tex  revised_plan_v4.tex  setup.py  test.ipynb  test.py
QuantumDGM/: __init__.py  circuit.py  model.py  sampler.py  visualization.py
docs/: README.md  api_reference.md  architecture.md  examples.md  getting_started.md  graphical_models.md  quantum_circuits.md  revised_plan_spec.json  revised_plan_traceability.md  utilities.md
examples/: README.md  demo_notebook.ipynb  demo_script.py  fair_comparison_split.py  quantum_vs_classical_demo.py  sampling_methods_comparison.py  timing_benchmark.py  variational_training_demo.py
examples/figures/: .gitkeep
examples/tests/: IMPLEMENTATION_SUMMARY.md  test_optimizations.py  test_variational_training.py
experiments/: bq_mps_baseline.py  bq_oracle.py  generate_paper_artifacts.py  graph_families.py  plotting.py  run_all_for_paper.py  run_amplitude_scaling.py  run_entanglement_sweep.py  run_ess_sweep.py  run_fidelity_decomposition.py  run_inverse_cdf_baseline.py  run_large_n_sweep.py  run_marginal_matching.py  run_mps_scaling.py  run_parallel_tempering_baseline.py  run_vqc_diagnosis_ablation.py  seeds.json  verify_paper_artifacts.py
figures/: ARTIFACT_LAYOUT.md  paper_generated_metadata.tex  paper_generated_rows.tex  paper_table_metrics.json  reviewer_metrics.json
qcgm/: __init__.py  circuit.py  model.py  sampler.py  statistics.py  utils.py  visualization.py
qcgm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qcgmlib/: __init__.py
qcgmlib/models/: __init__.py  graphical_model.py  pauli_markov.py
qcgmlib/qcg_circuit/: __init__.py  hamiltonian.py  qcgm_circuit.py
qcgmlib/sampling/: __init__.py  inference.py  simulator.py
src/: __init__.py  amplitude_encoding.py  backends.py  entanglement.py  metrics.py  train.py
(+4 files in other folders)
